add ApiResponse wrapper and refactor controllers to use it