@@ -1,5 +1,6 @@
 package com.example.demo.exception;
 
+import com.example.demo.response.ApiResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpHeaders;
@@ -15,60 +16,59 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
     private static final Logger logger = LoggerFactory.getLogger(GlobalExceptionHandler.class);
 
-    private Map<String, Object> body(String message, String errorKey) {
+    private ApiResponse<Object> body(String message, String errorKey) {
         Map<String, Object> map = new LinkedHashMap<>();
-        map.put("message", message);
         map.put("errorKey", errorKey);
-        return map;
+        return ApiResponse.error(message, map);
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<Map<String, Object>> handleValidation(MethodArgumentNotValidException ex) {
+    public ResponseEntity<ApiResponse<Object>> handleValidation(MethodArgumentNotValidException ex) {
         List<String> errors = ex.getBindingResult().getFieldErrors()
                 .stream()
                 .map(f -> f.getField() + ": " + (f.getDefaultMessage() == null ? "" : f.getDefaultMessage()))
-                .collect(Collectors.toList());
+                .toList();
         String message = "Validation failed: " + String.join("; ", errors);
         logger.info("Validation error: {}", message);
-        Map<String, Object> body = body(message, "VALIDATION_ERROR");
-        body.put("details", errors);
+        Map<String, Object> data = new LinkedHashMap<>();
+        data.put("errorKey", "VALIDATION_ERROR");
+        data.put("details", errors);
+        ApiResponse<Object> body = ApiResponse.error(message, data);
         return new ResponseEntity<>(body, new HttpHeaders(), HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler(AccessDeniedException.class)
-    public ResponseEntity<Map<String, Object>> handleAccessDenied(AccessDeniedException ex) {
+    public ResponseEntity<ApiResponse<Object>> handleAccessDenied(AccessDeniedException ex) {
         logger.warn("Access denied: {}", ex.getMessage());
-        Map<String, Object> body = body("Access is denied", "ACCESS_DENIED");
+        ApiResponse<Object> body = body("Access is denied", "ACCESS_DENIED");
         return new ResponseEntity<>(body, HttpStatus.FORBIDDEN);
     }
 
     @ExceptionHandler(AuthenticationException.class)
-    public ResponseEntity<Map<String, Object>> handleAuthentication(AuthenticationException ex) {
+    public ResponseEntity<ApiResponse<Object>> handleAuthentication(AuthenticationException ex) {
         logger.warn("Authentication failed: {}", ex.getMessage());
-        Map<String, Object> body = body("Authentication failed", "AUTHENTICATION_FAILED");
+        ApiResponse<Object> body = body("Authentication failed", "AUTHENTICATION_FAILED");
         return new ResponseEntity<>(body, HttpStatus.UNAUTHORIZED);
     }
 
     @ExceptionHandler(HttpRequestMethodNotSupportedException.class)
-    public ResponseEntity<Map<String, Object>> handleMethodNotSupported(HttpRequestMethodNotSupportedException ex) {
+    public ResponseEntity<ApiResponse<Object>> handleMethodNotSupported(HttpRequestMethodNotSupportedException ex) {
         String message = "Method not allowed: " + ex.getMethod();
         logger.info(message);
-        Map<String, Object> body = body(message, "METHOD_NOT_ALLOWED");
+        ApiResponse<Object> body = body(message, "METHOD_NOT_ALLOWED");
         return new ResponseEntity<>(body, HttpStatus.METHOD_NOT_ALLOWED);
     }
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<Map<String, Object>> handleAll(Exception ex) {
+    public ResponseEntity<ApiResponse<Object>> handleAll(Exception ex) {
         logger.error("Unhandled exception", ex);
         String message = ex.getMessage() == null ? "Internal server error" : ex.getMessage();
-        Map<String, Object> body = body(message, "INTERNAL_ERROR");
+        ApiResponse<Object> body = body(message, "INTERNAL_ERROR");
         return new ResponseEntity<>(body, HttpStatus.INTERNAL_SERVER_ERROR);
     }
 }
-
